syntax = "proto3";

package chat.sys;

option go_package = "./pb";

message Message{
    int64 id=1; // 消息id
    int64 to_user_id=2; // 消息接收者id
    int64 from_user_id=3; // 消息发送者id
    string content=4; // 消息内容
    int64 create_time=5; // 消息创建时间
}

message SendMessageReq{
    int64 src_user_id=1;
    int64 dst_user_id=2;
    uint32 action_type=3;
    string content=4;
}
message SendMessageRes{
    uint32 status_code=1;
    string status_msg=2;
}

message GetMessageReq{
    int64 src_user_id=1;
    int64 dst_user_id=2;
}
message GetMessageRes{
    uint32 status_code=1;
    string status_msg=2;
    repeated Message messages = 3;
}

message StoreMessageReq{
    int64 src_user_id=1;
    int64 dst_user_id=2;
    string content=3;
}
message StoreMessageRes{
    uint32 status_code=1;
    string status_msg=2;
}

service Sys {
    rpc SendMessage (SendMessageReq) returns (SendMessageRes);
    rpc GetMessage (GetMessageReq) returns (GetMessageRes);
    rpc StoreMessage (StoreMessageReq) returns (StoreMessageRes);
}